<resources>
    <string name="app_name">Poslite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="poslite">POS Lite</string>
    <string name="enter">Enter</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="create_category">Create Category</string>
    <string name="update_category">Update Category</string>
    <string name="delete_category">Delete Category</string>

    <string name="create_product">Create Product</string>
    <string name="update_product">Update Product</string>
    <string name="delete_product">Delete Product</string>
    
    
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="are_you_sure_want_to_create_new_category">Are you sure want to create new category?</string>
    <string name="are_you_sure_want_to_update_this_category">Are you sure want to update this category?</string>
    <string name="are_you_sure_want_to_delete_this_category">Are you sure want to delete this category?</string>

    <string name="are_you_sure_want_to_create_new_product">Are you sure want to create new product?</string>
    <string name="are_you_sure_want_to_update_this_product">Are you sure want to update this product?</string>
    <string name="are_you_sure_want_to_delete_this_product">Are you sure want to delete this product?</string>
    
    
    <string name="decline">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="update">Update</string>
    <string name="not_a_valid_title">Not a valid title</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>

</resources>